src/app/(marketing)/Landing.module.css
.landing, :global(.light) .landing, :global(.light-theme) .landing, :global(.radix-themes) :global(.light) .landing {
  --gray-1: #F8F8F8;
  --gray-2: #EDECEA;
  --gray-3: #E5E3E4;
  --gray-4: #D3CED1;
  --gray-5: #B8B1B5;
  --gray-6: #9E959A;
  --gray-7: #867C81;
  --gray-8: #6F666B;
  --gray-9: #5E565A;
  --gray-10: #514B4E;
  --gray-11: #292628;
  --gray-12: #1c2124;

  --gray-a1: #2d606005;
  --gray-a2: #164e4e09;
  --gray-a3: #062c4614;
  --gray-a4: #0225371d;
  --gray-a5: #07273b27;
  --gray-a6: #041f352f;
  --gray-a7: #0220313b;
  --gray-a8: #031f2f51;
  --gray-a9: #00121c80;
  --gray-a10: #000f188a;
  --gray-a11: #000910a7;
  --gray-a12: #01070ae3;

  --gray-contrast: #FFFFFF;
  --gray-surface: #ffffffcc;
  --gray-indicator: #7c858a;
  --gray-track: #7c858a;
  --color-background: #edecea;
}

@supports (color: color(display-p3 1 1 1)) {
  @media (color-gamut: p3) {
    .landing, :global(.light) .landing, :global(.light-theme) .landing, :global(.radix-themes) :global(.light) .landing {
      --gray-1: oklch(96.9% 0.0012 234);
      --gray-2: oklch(95.9% 0.0022 234);
      --gray-3: oklch(92.9% 0.0039 234);
      --gray-4: oklch(90.4% 0.0051 234);
      --gray-5: oklch(88% 0.0066 234);
      --gray-6: oklch(85.5% 0.0076 234);
      --gray-7: oklch(82.1% 0.0094 234);
      --gray-8: oklch(76% 0.0127 234);
      --gray-9: oklch(61.1% 0.0128 234);
      --gray-10: oklch(57.6% 0.0122 234);
      --gray-11: oklch(47.2% 0.0105 234);
      --gray-12: oklch(24.4% 0.0088 234);

      --gray-a1: color(display-p3 0.051 0.2824 0.2824 / 0.017);
      --gray-a2: color(display-p3 0.0235 0.2627 0.2627 / 0.033);
      --gray-a3: color(display-p3 0.0078 0.1137 0.2235 / 0.073);
      --gray-a4: color(display-p3 0.0039 0.1098 0.1843 / 0.109);
      --gray-a5: color(display-p3 0.0078 0.1137 0.1961 / 0.146);
      --gray-a6: color(display-p3 0.0039 0.0941 0.1804 / 0.178);
      --gray-a7: color(display-p3 0.0039 0.1059 0.1765 / 0.226);
      --gray-a8: color(display-p3 0.0039 0.0941 0.1451 / 0.307);
      --gray-a9: color(display-p3 0.0039 0.0588 0.0902 / 0.492);
      --gray-a10: color(display-p3 0 0.051 0.0824 / 0.537);
      --gray-a11: color(display-p3 0 0.0314 0.0549 / 0.65);
      --gray-a12: color(display-p3 0 0.0196 0.0314 / 0.884);

      --gray-contrast: #FFFFFF;
      --gray-surface: color(display-p3 1 1 1 / 80%);
      --gray-indicator: oklch(61.1% 0.0128 234);
      --gray-track: oklch(61.1% 0.0128 234);
      --color-background: #edecea;
    }
  }
}

:global(.dark) .landing, :global(.dark-theme) .landing, :global(.radix-themes) :global(.dark) .landing, :global(:is(.dark, .dark-theme)) .landing {
  --gray-1: #31302e;
  --gray-2: #363533;
  --gray-3: #3e3c3a;
  --gray-4: #42413f;
  --gray-5: #474643;
  --gray-6: #4e4c4a;
  --gray-7: #595755;
  --gray-8: #6e6d6b;
  --gray-9: #797775;
  --gray-10: #83817f;
  --gray-11: #b8b6b4;
  --gray-12: #eeedeb;

  --gray-a1: #e30d0007;
  --gray-a2: #f17f210d;
  --gray-a3: #fdb17916;
  --gray-a4: #fcc99c1b;
  --gray-a5: #fdd4a821;
  --gray-a6: #fbd5ba2a;
  --gray-a7: #fce2cd37;
  --gray-a8: #fff0e350;
  --gray-a9: #fdefe55e;
  --gray-a10: #fdf1e96a;
  --gray-a11: #fef9f4aa;
  --gray-a12: #fffdfbeb;

  --gray-contrast: #FFFFFF;
  --gray-surface: rgba(0, 0, 0, 0.05);
  --gray-indicator: #797775;
  --gray-track: #797775;
  --color-background: #2c3134;
}

@supports (color: color(display-p3 1 1 1)) {
  @media (color-gamut: p3) {
    :global(.dark) .landing, :global(.dark-theme) .landing, :global(.radix-themes) :global(.dark) .landing {
      --gray-1: oklch(30.9% 0.0036 84.56);
      --gray-2: oklch(33% 0.0034 84.56);
      --gray-3: oklch(35.8% 0.0043 84.56);
      --gray-4: oklch(37.6% 0.0043 84.56);
      --gray-5: oklch(39.3% 0.0043 84.56);
      --gray-6: oklch(41.8% 0.0043 84.56);
      --gray-7: oklch(45.8% 0.0043 84.56);
      --gray-8: oklch(53.6% 0.0043 84.56);
      --gray-9: oklch(57.1% 0.0043 84.56);
      --gray-10: oklch(60.5% 0.0043 84.56);
      --gray-11: oklch(77.8% 0.0043 84.56);
      --gray-12: oklch(94.7% 0.0029 84.56);

      --gray-a1: color(display-p3 0.9608 0 0 / 0.02);
      --gray-a2: color(display-p3 1 0.5608 0.1137 / 0.043);
      --gray-a3: color(display-p3 1 0.7255 0.498 / 0.081);
      --gray-a4: color(display-p3 0.9961 0.8196 0.6353 / 0.1);
      --gray-a5: color(display-p3 1 0.8588 0.6784 / 0.124);
      --gray-a6: color(display-p3 0.9961 0.8627 0.7529 / 0.158);
      --gray-a7: color(display-p3 0.9961 0.902 0.8235 / 0.21);
      --gray-a8: color(display-p3 1 0.9529 0.902 / 0.31);
      --gray-a9: color(display-p3 1 0.9529 0.9098 / 0.362);
      --gray-a10: color(display-p3 0.9961 0.9608 0.9216 / 0.41);
      --gray-a11: color(display-p3 1 0.9765 0.9608 / 0.662);
      --gray-a12: color(display-p3 0.9961 0.9922 0.9843 / 0.92);

      --gray-contrast: #FFFFFF;
      --gray-surface: color(display-p3 0 0 0 / 5%);
      --gray-indicator: oklch(57.1% 0.0043 84.56);
      --gray-track: oklch(57.1% 0.0043 84.56);
      --color-background: #2c3134;
    }
  }
}

.landing {
  --heading-font-family: "Berkeley Mono", Menlo, Consolas, monospace;
  background: var(--color-background);
  overflow: hidden;
}
.landingInner {
  border: 1px solid var(--gray-7);
  border-top: 0;
  border-bottom: 0;
  overflow: hidden;
  & > nav {
    background: var(--gray-2);
  }
}
.landing a {
  font-family: var(--heading-font-family);
  text-decoration: underline;
  text-transform: uppercase;
}

.subheading {
  text-transform: uppercase;
  font-family: var(--heading-font-family);
  font-weight: bold;
  letter-spacing: 0.5px;
}
.heroImage {
  mix-blend-mode: difference;
}
.productsSection {
  border-bottom: 1px dashed var(--gray-9);
  border-top: 1px dashed var(--gray-9);
}
.sectionDark {
  background: var(--gray-12);
  color: var(--gray-1);
}
.tout {
  border-top: 1px solid var(--gray-7);
}
.toutPrice p:first-of-type {
  font-family: "Berkeley Mono";
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1;
  letter-spacing: 0.03rem;
  text-transform: uppercase;
}
.toutHost p:first-of-type {
  font-size: 8rem;
  line-height: 100%;
  margin: 0;
}

.priceAsterisk {
  font-family: var(--heading-font-family);
  line-height: 1;
}
.caseStudy {
  border: 1px dashed var(--gray-7);
}

.carouselArrows {
  cursor: pointer;
  user-select: none;
  font-family: var(--heading-font-family);
  font-size: var(--font-size-4);
}

.carouselArrows span {
  color: var(--gray-11);
}

.carouselArrows span:hover {
  color: var(--gray-12);
}

.carouselViewport {
  overflow: hidden;
  position: relative;
  flex: 1;
}

.carouselTrack {
  position: absolute;
  width: 100%;
  transition: transform 0.4s ease;
}

